--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "tsc",
     "prestart": "npm run build",
     "start": "node --env-file=.env dist/src/app.js",
-    "dev": "node --env-file=.env --import tsx --watch -r ts-node/register src/app.ts"
+    "dev": "node --env-file=.env --import tsx --watch -r ts-node/register src/app.ts",
+    "scripts": "node --env-file=.env --import tsx --watch -r ts-node/register"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
@@ -23,7 +24,9 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@solana/spl-token": "^0.4.12",
     "@solana/web3.js": "^1.98.0",
+    "agent-twitter-client": "^0.0.18",
     "bs58": "^6.0.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -32,6 +35,7 @@
     "multer": "^1.4.5-lts.1",
     "sequelize": "^6.37.5",
     "tweetnacl": "^1.0.3",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "zod": "^3.24.2"
   }
 }
