--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mariadb": "^3.4.0",
     "multer": "^1.4.5-lts.1",
     "sequelize": "^6.37.5",
+    "socket.io": "^4.8.1",
     "tweetnacl": "^1.0.3",
     "winston": "^3.17.0",
     "zod": "^3.24.2"
