--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.4.0",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
     "sequelize": "^6.37.5",
     "socket.io": "^4.8.1",
     "tweetnacl": "^1.0.3",
