--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@raydium-io/raydium-sdk-v2": "^0.1.115-alpha",
     "@solana/spl-token": "^0.4.12",
     "@solana/web3.js": "^1.98.0",
     "agent-twitter-client": "^0.0.18",
