--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
+    "@types/bn.js": "^5.1.6",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/multer": "^1.4.12",
@@ -24,10 +25,14 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.30.1",
     "@raydium-io/raydium-sdk-v2": "^0.1.115-alpha",
+    "@solana/buffer-layout": "^4.0.1",
+    "@solana/buffer-layout-utils": "^0.2.0",
     "@solana/spl-token": "^0.4.12",
     "@solana/web3.js": "^1.98.0",
     "agent-twitter-client": "^0.0.18",
+    "bn.js": "^5.2.1",
     "bs58": "^6.0.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
